quick collapse css fix

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -69,9 +69,9 @@
         }
 
         .p-container {
-            padding: 0.8rem 0.5rem;
+            padding: 1.4rem 0.5rem;
             line-height: 1rem;
-            bottom: 0;
+            bottom: 0.6rem;
             p {
                 font-size: 12px;
             }
